--- a/package.json
+++ b/package.json
@@ -2,5 +2,12 @@
   "name": "poc-add-gened",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "chai": "^4.1.2",
+    "mocha": "^5.0.1"
+  },
+  "scripts": {
+    "test": "mocha  *.spec.js --recursive --watch"
+  }
 }
