--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "dependencies": {
     "chai": "^4.1.2",
-    "mocha": "^5.0.1"
+    "mocha": "^5.0.1",
+    "rethinkdb": "^2.3.3"
   },
   "scripts": {
     "test": "mocha  *.spec.js --recursive --watch"
